Fix pop-up size on small screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,45 @@
     --color-complementary2-dark: rgb(184, 43, 184);
     
 }
+@media (max-width: 600px) {
+    body #pop-up {
+        width: max(80vw, 300px);
 
+    }
+    
+    body #pop-up form {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+        grid-template-rows: repeat(4, 1.5fr) 1fr;
+        gap: 0px;
+    }
+    
+    body #pop-up form img {
+        grid-column: 1 / 2;
+        align-self: end;
+    }
+
+    body #pop-up form select{
+        justify-self: left;
+    }
+    
+    body #pop-up form select:first-of-type {
+        grid-row: 1 / 2;
+        grid-column: 2/ -1;
+    }
+
+    body #pop-up form select:nth-of-type(2) {
+        grid-row: 3 / 4;
+        grid-column: 2/ -1;
+    }
+    
+    body #pop-up input{
+        align-self: start;
+        height: auto;
+        grid-column: 1 / -1;
+    }
+   
+}
 
 @media (max-width: 1000px) {
     :root main {
